--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://empirepark.ca" # the base hostname & protocol for your site, e.g. http://example.com
+repository: empirepark/empirepark.github.io
 logo: /assets/logo.png
 twitter_username: jekyllrb
 github_username:  jekyll
@@ -51,9 +52,14 @@ collections:
     permalink: /:collection/:path/
     output: true
 
+sass:
+  style: :compressed
 
 gems:
   - jekyll-feed
+  - jekyll-seo-tag
+
 exclude:
   - Gemfile
   - Gemfile.lock
+  - README.md
