Swath of changes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 - title: Programs & Events
   url: "/programs/"
 
-- title: "Volunteer"
-  url: "/volunteers/"
+# - title: "Volunteer"
+#   url: "/volunteers/"
 
 - title: "Membership"
   url: "/membership/"
