--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
-- title: Programs & Events
-  url: "/programs/"
-
-# - title: "Volunteer"
-#   url: "/volunteers/"
-
-- title: "Membership"
-  url: "/membership/"
-
-- title: "Rentals"
-  url: "/rentals/"
+# - title: Programs & Events
+#   url: "/programs/"
+#
+# # - title: "Volunteer"
+# #   url: "/volunteers/"
+#
+# - title: "Membership"
+#   url: "/membership/"
+#
+# - title: "Rentals"
+#   url: "/rentals/"
