Update newsletter & upcoming event

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,3 +9,5 @@
 #
 # - title: "Rentals"
 #   url: "/rentals/"
+- title: "Empire Park Newsletter June/July 2018"
+  url: "/assets/newsletters/June - July 2018.pdf"
