Include agm link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,8 @@
 #
 # - title: "Rentals"
 #   url: "/rentals/"
-- title: "Empire Park Newsletter June/July 2018"
+- title: "EPCL Newsletter June/July 2018"
   url: "/assets/newsletters/June - July 2018.pdf"
+
+- title: "2018 AGM Agenda"
+  url: "/assets/agm-agenda-2018.pdf"
