Update navigation to new newsletter

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@
 #
 # - title: "Rentals"
 #   url: "/rentals/"
-- title: "EPCL Newsletter June/July 2018"
-  url: "/assets/newsletters/June - July 2018.pdf"
+- title: "EPCL Newsletter October/November 2018"
+  url: "/assets/newsletters/October-November 2018.pdf"
 
 - title: "2018 AGM Agenda"
   url: "/assets/agm-agenda-2018.pdf"
